// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addressSchema 1`] = `
Array [
  "Address.type.ts",
  "//
// Auto-generated by common-type, do not edit manually
//

import { Person } from '.'

export interface Address {
  name: string
  address1: string
  address2?: string
  even?: boolean
  /**
   * @validationType integer
   */
  int?: number
  constNum?: 26
  constStr?: 'abc'
  constBool?: true
  nullProp?: null
  strArray?: string[]
  numArray?: number[]
  tuple1?: [string, number]
  person?: Person
  nestedObj?: {
    a?: {
      b?: string
    }
  }
  union1?: string | number
  union2?:
    | string
    | Person
    | {
        a?: string
      }
  intersection1?: {
    a?: string
  } & {
    n?: number
  }
  indexed?: {
    a?: string
    [k: string]: string
  }
}
",
]
`;

exports[`literalStrSchema 1`] = `
Array [
  "Item.type.ts",
  "//
// Auto-generated by common-type, do not edit manually
//

export type Item = 'abc'
",
]
`;

exports[`numberEnumSchema 1`] = `
Array [
  "DataFlag.type.ts",
  "//
// Auto-generated by common-type, do not edit manually
//

export type DataFlag = 1 | 2 | 3
",
]
`;

exports[`stringEnumSchema 1`] = `
Array [
  "DataFlag.type.ts",
  "//
// Auto-generated by common-type, do not edit manually
//

export enum DataFlag {
  TIRED = 'TIRED',
  BORED = 'BORED',
  STRESSED = 'STRESSED',
}
",
]
`;
